changed to async all logservice api
