# src/main/java/it/gov/pagopa/logextractor/rest/LogController.java
@@ -3,8 +3,6 @@ package it.gov.pagopa.logextractor.rest;
 import javax.servlet.http.HttpServletResponse;
 
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.core.io.Resource;
-import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.CrossOrigin;
@@ -21,7 +19,6 @@ import it.gov.pagopa.logextractor.pn_logextractor_be.model.PersonLogsRequestDto;
 import it.gov.pagopa.logextractor.pn_logextractor_be.model.SessionLogsRequestDto;
 import it.gov.pagopa.logextractor.pn_logextractor_be.model.TraceIdLogsRequestDto;
 import it.gov.pagopa.logextractor.service.LogService;
-import it.gov.pagopa.logextractor.service.ThreadLocalOutputStreamService;
 import it.gov.pagopa.logextractor.util.PasswordFactory;
 import it.gov.pagopa.logextractor.util.RandomUtils;
 import it.gov.pagopa.logextractor.util.external.s3.S3ClientService;
@@ -40,16 +37,12 @@ public class LogController implements LogsApi {
 	@Autowired
 	private HttpServletResponse httpServletResponse;
 	
-	@Autowired
-	ThreadLocalOutputStreamService threadLocalService;
-
-	private  void handleResponse() throws Exception {
-		try {
-			threadLocalService.get().flush();
-			threadLocalService.get().close();
-		} finally {
-			threadLocalService.remove();
-		}
+	private  ResponseEntity<BaseResponseDto> prepareResponse(String key, String zipPassword) throws Exception {
+		httpServletResponse.addHeader("Access-Control-Expose-Headers", "password,content-disposition");
+		httpServletResponse.addHeader("password", zipPassword);
+		BaseResponseDto dto = new BaseResponseDto();
+		dto.setMessage(key);
+		return ResponseEntity.status(HttpStatus.OK).body(dto);
 	}
 
 	@Override
@@ -66,24 +59,17 @@ public class LogController implements LogsApi {
 	public ResponseEntity<BaseResponseDto> personActivityLogs(String xPagopaPnUid, String xPagopaPnCxType, PersonLogsRequestDto personLogsRequestDto) throws Exception {
 		
 		String key = personLogsRequestDto.getTicketNumber()+"-"+(new RandomUtils().generateRandomAlphaNumericString())+".zip";
-		BaseResponseDto dto = new BaseResponseDto();
-		dto.setMessage(key);
-		ResponseEntity<BaseResponseDto> ret = ResponseEntity.status(HttpStatus.OK).body(dto);
-
 		String zipPassword=PasswordFactory.createPassword();
 		if (Boolean.TRUE.equals(personLogsRequestDto.getDeanonimization())) {
 			logService.getDeanonimizedPersonLogs(key, zipPassword, personLogsRequestDto, xPagopaPnUid, xPagopaPnCxType);
 		}else {
 			logService.getAnonymizedPersonLogs(key, zipPassword, personLogsRequestDto, xPagopaPnUid, xPagopaPnCxType); 
 		}
-		httpServletResponse.addHeader("Access-Control-Expose-Headers", "password,content-disposition");
-		httpServletResponse.addHeader("password", zipPassword);
-		return ret;
+		return prepareResponse(key, zipPassword);
 	}
 
 	@ExceptionHandler(value = CustomException.class)
 	public ResponseEntity<BaseResponseDto> handleCustomException(CustomException e){
-		this.threadLocalService.remove();
 		return ResponseEntity.status(e.getCode()).body(e.getDto());
 	}
 
@@ -91,43 +77,36 @@ public class LogController implements LogsApi {
 	public ResponseEntity<BaseResponseDto> notificationInfoLogs(String xPagopaPnUid, String xPagopaPnCxType, NotificationInfoRequestDto notificationInfoRequestDto) throws Exception {
 		
 		String key = notificationInfoRequestDto.getTicketNumber()+"-"+(new RandomUtils().generateRandomAlphaNumericString())+".zip";
-		BaseResponseDto dto = new BaseResponseDto();
-		dto.setMessage(key);
-		ResponseEntity<BaseResponseDto> ret = ResponseEntity.status(HttpStatus.OK).body(dto);
-
 		String zipPassword=PasswordFactory.createPassword();
 		logService.getNotificationInfoLogs(key, zipPassword,notificationInfoRequestDto,xPagopaPnUid, xPagopaPnCxType);
-		httpServletResponse.addHeader("Access-Control-Expose-Headers", "password,content-disposition");
-		httpServletResponse.addHeader("password", zipPassword);
-		return ret;
-
+		return prepareResponse(key, zipPassword);
 	}
 
 	@Override
-	public ResponseEntity<Resource> notificationsInMonth(String xPagopaPnUid, String xPagopaPnCxType, MonthlyNotificationsRequestDto monthlyNotificationsRequestDto) throws Exception {
-		this.threadLocalService.initialize(httpServletResponse, monthlyNotificationsRequestDto.getTicketNumber());
-		logService.getMonthlyNotifications(monthlyNotificationsRequestDto, xPagopaPnUid, xPagopaPnCxType);
-		handleResponse();
-		return null;
+	public ResponseEntity<BaseResponseDto> notificationsInMonth(String xPagopaPnUid, String xPagopaPnCxType, MonthlyNotificationsRequestDto monthlyNotificationsRequestDto) throws Exception {
+		String key = monthlyNotificationsRequestDto.getTicketNumber() +"-"+(new RandomUtils().generateRandomAlphaNumericString())+".zip";
+		String zipPassword=PasswordFactory.createPassword();
+		logService.getMonthlyNotifications(key, zipPassword,monthlyNotificationsRequestDto, xPagopaPnUid, xPagopaPnCxType);
+		return prepareResponse(key, zipPassword);
 	}
 
 	@Override
-	public ResponseEntity<Resource> processLogs(String xPagopaPnUid, String xPagopaPnCxType, TraceIdLogsRequestDto traceIdLogsRequestDto) throws Exception {
-		this.threadLocalService.initialize(httpServletResponse, "processLogs");
-		logService.getTraceIdLogs(traceIdLogsRequestDto, xPagopaPnUid, xPagopaPnCxType);
-		handleResponse();
-		return null;
+	public ResponseEntity<BaseResponseDto> processLogs(String xPagopaPnUid, String xPagopaPnCxType, TraceIdLogsRequestDto traceIdLogsRequestDto) throws Exception {
+		String key = traceIdLogsRequestDto.getTraceId() +"-"+(new RandomUtils().generateRandomAlphaNumericString())+".zip";
+		String zipPassword=PasswordFactory.createPassword();
+		logService.getTraceIdLogs(key, zipPassword,traceIdLogsRequestDto, xPagopaPnUid, xPagopaPnCxType);
+		return prepareResponse(key, zipPassword);
 	}
 	
 	@Override
-	public ResponseEntity<Resource> sessionLogs(String xPagopaPnUid, String xPagopaPnCxType, SessionLogsRequestDto sessionLogsRequestDto) throws Exception {
-		this.threadLocalService.initialize(httpServletResponse, sessionLogsRequestDto.getTicketNumber());
+	public ResponseEntity<BaseResponseDto> sessionLogs(String xPagopaPnUid, String xPagopaPnCxType, SessionLogsRequestDto sessionLogsRequestDto) throws Exception {
+		String key = sessionLogsRequestDto.getTicketNumber() +"-"+(new RandomUtils().generateRandomAlphaNumericString())+".zip";
+		String zipPassword=PasswordFactory.createPassword();
 		if (Boolean.TRUE.equals(sessionLogsRequestDto.getDeanonimization())) {
-			logService.getDeanonimizedSessionLogs(sessionLogsRequestDto, xPagopaPnUid, xPagopaPnCxType);
+			logService.getDeanonimizedSessionLogs(key, zipPassword,sessionLogsRequestDto, xPagopaPnUid, xPagopaPnCxType);
 		}else {
-			logService.getAnonymizedSessionLogs(sessionLogsRequestDto, xPagopaPnUid, xPagopaPnCxType);
+			logService.getAnonymizedSessionLogs(key, zipPassword,sessionLogsRequestDto, xPagopaPnUid, xPagopaPnCxType);
 		}
-		handleResponse();
-		return null;
+		return prepareResponse(key, zipPassword);
 	}
 }
